@@ -33,6 +33,8 @@ Version 1.6.current:
     critical stuff gets committed with -m "... (backport to 1.5)" and then
     backported to 1.5. :) Commits to 1.5 done in any other way are likely to
     get reverted.
+  * refactored some actions to use ActionBase base class
+  * moved "test" action from wikiaction to MoinMoin/action/ (and use ActionBase)
 
 
 Version 1.5.current:
